home page background layout issue solved

--- a/components/Home/HomeImpacts/HomeImpacts.scss
+++ b/components/Home/HomeImpacts/HomeImpacts.scss
@@ -16,10 +16,11 @@
     }
     &_layout{
         position: absolute;
-        left: -2px;
+        top: 0;
+        height: 100%;
 
         img{
-            width: 101%;
+            height: 100%;
             object-fit: cover;
         }
 
